--- a/index.html
+++ b/index.html
@@ -24,14 +24,12 @@
 }
 
 *{box-sizing:border-box}
-
 body{
   margin:0;
   font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;
   background:linear-gradient(180deg,#0b0d12,#0f1220);
   color:var(--text);
 }
-
 .wrapper{max-width:1200px;margin:auto;padding:24px;}
 
 header{
@@ -42,14 +40,8 @@ header{
   flex-wrap:wrap;
   margin-bottom:18px;
 }
-
 h1{margin:0;font-size:28px;letter-spacing:.4px;}
-
-.subtitle{
-  margin-top:6px;
-  font-size:13px;
-  color:var(--muted);
-}
+.subtitle{margin-top:6px;font-size:13px;color:var(--muted);}
 
 .right{
   display:flex;
@@ -57,7 +49,6 @@ h1{margin:0;font-size:28px;letter-spacing:.4px;}
   align-items:flex-end;
   gap:10px;
 }
-
 .actions{display:flex;gap:10px;flex-wrap:wrap;align-items:center;justify-content:flex-end;}
 
 button{
@@ -70,7 +61,6 @@ button{
   border-radius:12px;
   cursor:pointer;
 }
-
 button.active{
   border-color:var(--cyan);
   box-shadow:0 0 14px rgba(90,215,255,.35);
@@ -92,30 +82,22 @@ button.active{
   border-radius:14px;
   overflow:hidden;
 }
-
 .tablewrap{overflow:auto;max-height:72vh;}
-
 table{width:100%;border-collapse:collapse;}
-
 thead{
   background:var(--header);
   position:sticky;
   top:0;
   z-index:2;
 }
-
 th,td{padding:14px;text-align:left;}
-
 th{font-size:13px;color:var(--muted);letter-spacing:.5px;}
-
 tbody tr{border-bottom:1px solid rgba(255,255,255,.06);}
 
 tbody tr.red{background:rgba(255,45,85,.16);}
 tbody tr.red td{color:#ffdbe3;text-shadow:0 0 6px rgba(255,45,85,.65);}
-
 tbody tr.yellow{background:rgba(255,214,10,.14);}
 tbody tr.yellow td{color:#fff3b0;}
-
 tbody tr.ok td{color:#e5f8ee;}
 
 .dot{
@@ -155,11 +137,11 @@ tfoot td{
   <header>
     <div>
       <h1>Medikamenteninventar 79/907</h1>
-      <div class="subtitle">Standard: nur kritische (rot/gelb) · Alle: sortiert nach Ablaufdatum (früheste zuerst)</div>
+      <div class="subtitle">NUR KRITISCHE: rot/gelb · ALLE MEDIKAMENTE: nach Ablaufdatum aufsteigend</div>
     </div>
 
     <div class="right">
-      <div class="pill" id="inventur">Letzte Inventur: —</div>
+      <div class="pill" id="inventur">Letzte Inventur: 02.02.2026</div>
       <div class="actions">
         <button id="btnCritical" class="active">NUR KRITISCHE</button>
         <button id="btnAll">ALLE MEDIKAMENTE</button>
@@ -190,12 +172,100 @@ tfoot td{
 </div>
 
 <script>
-/* ========= Einstellungen ========= */
-const LAST_INVENTORY_DATE = "01.02.2026"; // Datum der letzten Inventur (aus Dateiname 01022026)
-document.getElementById("inventur").textContent = "Letzte Inventur: " + LAST_INVENTORY_DATE;
+/* ========= Daten: integriert (deine neue Liste) ========= */
+const meds = [
+  // RTW Ampullarium
+  {"name": "Adenosin 6mg/2ml", "ort": "RTW Ampullarium", "ablauf": "2026-09-30", "menge": 6},
+  {"name": "Amiodaron 150mg/3ml", "ort": "RTW Ampullarium", "ablauf": "2026-12-31", "menge": 3},
+  {"name": "Atropin 0.5mg/1ml", "ort": "RTW Ampullarium", "ablauf": "2026-08-31", "menge": 3},
+  {"name": "Histakut 4mg/4ml", "ort": "RTW Ampullarium", "ablauf": "2027-02-28", "menge": 2},
+  {"name": "Dibondrin 30mg", "ort": "RTW Ampullarium", "ablauf": "2030-03-31", "menge": 2},
+  {"name": "Sintetica 50mg/5ml", "ort": "RTW Ampullarium", "ablauf": "2028-04-30", "menge": 2},
+  {"name": "Ketanest S 250mg/10ml", "ort": "RTW Ampullarium", "ablauf": "2027-08-31", "menge": 2},
+  {"name": "Anexate", "ort": "RTW Ampullarium", "ablauf": "2027-06-30", "menge": 1},
+  {"name": "Midazolam 15mg/3ml", "ort": "RTW Ampullarium", "ablauf": "2028-03-31", "menge": 2},
+  {"name": "Nitro Pohl 10mg/ml", "ort": "RTW Ampullarium", "ablauf": "2026-10-31", "menge": 6},
+  {"name": "Heparin 1000 IE/ml (10ml)", "ort": "RTW Ampullarium", "ablauf": "2026-05-31", "menge": 1},
+  {"name": "Combivent", "ort": "RTW Ampullarium", "ablauf": "2027-02-28", "menge": 2},
+  {"name": "Xylanest purum 2%", "ort": "RTW Ampullarium", "ablauf": "2028-06-30", "menge": 1},
+  {"name": "Novalgin 2.5g (5ml)", "ort": "RTW Ampullarium", "ablauf": "2028-02-28", "menge": 2},
+  {"name": "Beloc 5mg/5ml", "ort": "RTW Ampullarium", "ablauf": "2029-10-31", "menge": 2},
+  {"name": "Furon 40mg", "ort": "RTW Ampullarium", "ablauf": "2030-02-28", "menge": 2},
+  {"name": "Naloxon 0.4mg/ml", "ort": "RTW Ampullarium", "ablauf": "2026-06-30", "menge": 2},
+  {"name": "Noradrenalin Kabi 1mg/ml", "ort": "RTW Ampullarium", "ablauf": "2026-08-31", "menge": 5},
+  {"name": "Ondansetron 4mg/2ml", "ort": "RTW Ampullarium", "ablauf": "2027-09-30", "menge": 2},
+  {"name": "Noradrenalin 10mg/10ml", "ort": "RTW Ampullarium", "ablauf": "2026-09-30", "menge": 1},
+  {"name": "Bricanyl", "ort": "RTW Ampullarium", "ablauf": "2026-06-30", "menge": 1},
+  {"name": "Theospirex", "ort": "RTW Ampullarium", "ablauf": "2028-02-28", "menge": 2},
+  {"name": "Cyclokapron", "ort": "RTW Ampullarium", "ablauf": "2027-07-31", "menge": 2},
+  {"name": "Urapidil 50mg/10ml", "ort": "RTW Ampullarium", "ablauf": "2028-01-31", "menge": 1},
+  {"name": "Prednisolut 250mg", "ort": "RTW Ampullarium", "ablauf": "2029-05-31", "menge": 1},
+  {"name": "Lösungsmittel für Prednisolut", "ort": "RTW Ampullarium", "ablauf": "2031-01-31", "menge": 1},
+  {"name": "Aspirin i.v 500mg", "ort": "RTW Ampullarium", "ablauf": "2026-05-31", "menge": 1},
+  {"name": "Lösungsmittel für Aspirin", "ort": "RTW Ampullarium", "ablauf": "2029-01-31", "menge": 1},
+  {"name": "L-Adreanin 20ml", "ort": "RTW Ampullarium", "ablauf": "2027-02-28", "menge": 2},
+  {"name": "Propofol 1% (20ml)", "ort": "RTW Ampullarium", "ablauf": "2026-05-31", "menge": 2},
+  {"name": "Phenylephrin 50myg/ml", "ort": "RTW Ampullarium", "ablauf": "2028-05-31", "menge": 2},
+  {"name": "Stesolid 5mg", "ort": "RTW Ampullarium", "ablauf": "2027-11-30", "menge": 1},
+  {"name": "Stesolid 10mg", "ort": "RTW Ampullarium", "ablauf": "2027-11-30", "menge": 1},
+  {"name": "Berodualin", "ort": "RTW Ampullarium", "ablauf": "2028-03-31", "menge": 1},
+  {"name": "Clopidogrel 75mg", "ort": "RTW Ampullarium", "ablauf": "2026-06-30", "menge": 8},
+  {"name": "Ticagrelor 90mg", "ort": "RTW Ampullarium", "ablauf": "2028-03-31", "menge": 2},
+  {"name": "Aspirin 500mg oral", "ort": "RTW Ampullarium", "ablauf": "2027-11-30", "menge": 2},
 
-/* ========= Daten (aus Excel) ========= */
-const meds = [{"name":"Adenosin 6mg/2ml","ort":"RTW Ampullarium","menge":6,"ablauf":"2026-09-30"},{"name":"Amiodaron 150mg/3ml","ort":"RTW Ampullarium","menge":3,"ablauf":"2026-12-31"},{"name":"Atropin 0.5mg/1ml","ort":"RTW Ampullarium","menge":3,"ablauf":"2026-08-31"},{"name":"Histakut 4mg/4ml","ort":"RTW Ampullarium","menge":2,"ablauf":"2027-02-28"},{"name":"Dibondrin 30mg","ort":"RTW Ampullarium","menge":2,"ablauf":"2030-03-31"},{"name":"Sintetica 50mg/5ml","ort":"RTW Ampullarium","menge":2,"ablauf":"2028-04-30"},{"name":"Ketanest S 250mg/10ml","ort":"RTW Ampullarium","menge":2,"ablauf":"2027-08-31"},{"name":"Anexate","ort":"RTW Ampullarium","menge":1,"ablauf":"2027-06-30"},{"name":"Midazolam 15mg/3ml","ort":"RTW Ampullarium","menge":2,"ablauf":"2028-03-31"},{"name":"Nitro Pohl 10mg/ml","ort":"RTW Ampullarium","menge":6,"ablauf":"2026-10-31"},{"name":"Amoxicillin/Clavulansäure 1g/0.2g","ort":"RTW Ampullarium","menge":1,"ablauf":"2027-01-31"},{"name":"Ceftriaxon 2g","ort":"RTW Ampullarium","menge":1,"ablauf":"2027-04-30"},{"name":"Pantoprazol 40mg","ort":"RTW Ampullarium","menge":3,"ablauf":"2028-02-29"},{"name":"Metoprolol 5mg/5ml","ort":"RTW Ampullarium","menge":3,"ablauf":"2027-10-31"},{"name":"Furosemid 20mg/2ml","ort":"RTW Ampullarium","menge":3,"ablauf":"2027-04-30"},{"name":"Ebrantil 25mg/5ml","ort":"RTW Ampullarium","menge":3,"ablauf":"2027-05-31"},{"name":"Ebrantil 50mg/10ml","ort":"RTW Ampullarium","menge":3,"ablauf":"2027-05-31"},{"name":"Dexamethason 4mg/ml","ort":"RTW Ampullarium","menge":2,"ablauf":"2027-06-30"},{"name":"Theodur retard 200mg","ort":"RTW Ampullarium","menge":1,"ablauf":"2028-06-30"},{"name":"Metamizol 500mg/ml","ort":"RTW Ampullarium","menge":1,"ablauf":"2027-08-31"},{"name":"Aspirin 500mg","ort":"RTW Ampullarium","menge":1,"ablauf":"2028-09-30"},{"name":"Metamizol 1g/2ml","ort":"RTW Ampullarium","menge":3,"ablauf":"2027-04-30"},{"name":"Ondansetron 4mg/2ml","ort":"RTW Ampullarium","menge":3,"ablauf":"2028-01-31"},{"name":"Diazepam 10mg/2ml","ort":"RTW Ampullarium","menge":1,"ablauf":"2026-11-30"},{"name":"Morphin 10mg/1ml","ort":"RTW Ampullarium","menge":3,"ablauf":"2028-01-31"},{"name":"Fentanyl 0.5mg/10ml","ort":"RTW Ampullarium","menge":3,"ablauf":"2027-09-30"},{"name":"Suprarenin 1mg/1ml","ort":"RTW Ampullarium","menge":3,"ablauf":"2027-03-31"},{"name":"Atropin 1mg/1ml","ort":"RTW Ampullarium","menge":3,"ablauf":"2028-06-30"},{"name":"Nitro Spray","ort":"RTW Ampullarium","menge":1,"ablauf":"2026-12-31"},{"name":"Naloxon 0.4mg/1ml","ort":"RTW Ampullarium","menge":3,"ablauf":"2028-01-31"},{"name":"Prednisolon 100mg","ort":"RTW Ampullarium","menge":3,"ablauf":"2028-04-30"},{"name":"Heparin 5000IE/0.2ml","ort":"RTW Ampullarium","menge":2,"ablauf":"2027-01-31"},{"name":"Clopidogrel 75mg","ort":"RTW Ampullarium","menge":8,"ablauf":""},{"name":"Ipratropiumbromid 0.5mg/2ml","ort":"RTW Ampullarium","menge":4,"ablauf":"2027-06-30"},{"name":"Salbutamol 5mg/2.5ml","ort":"RTW Ampullarium","menge":4,"ablauf":"2027-05-31"},{"name":"Reproterol 0.09mg/2ml","ort":"RTW Ampullarium","menge":4,"ablauf":"2027-06-30"},{"name":"NaCl 0.9% 10ml","ort":"RTW Ampullarium","menge":5,"ablauf":"2028-08-31"},{"name":"Lidocain 1% 10ml","ort":"RTW Ampullarium","menge":4,"ablauf":"2028-09-30"},{"name":"Lidocain 2% 5ml","ort":"RTW Ampullarium","menge":4,"ablauf":"2028-09-30"},{"name":"Ammolyt","ort":"RTW Ampullarium","menge":1,"ablauf":"2027-11-30"},{"name":"Bactroban","ort":"RTW Ampullarium","menge":1,"ablauf":"2026-09-30"},{"name":"Xylocain Gel","ort":"RTW Ampullarium","menge":1,"ablauf":"2028-03-31"},{"name":"Cortimyk","ort":"RTW Ampullarium","menge":1,"ablauf":"2026-09-30"},{"name":"Erythromycin Augensalbe","ort":"RTW Ampullarium","menge":1,"ablauf":"2026-09-30"},{"name":"Loperamid 2mg","ort":"RTW Ampullarium","menge":1,"ablauf":"2026-10-31"},{"name":"Paracetamol 500mg","ort":"RTW Ampullarium","menge":1,"ablauf":"2027-10-31"},{"name":"Ibuprofen 400mg","ort":"RTW Ampullarium","menge":1,"ablauf":"2027-06-30"},{"name":"Bisoprolol 5mg","ort":"RTW Ampullarium","menge":1,"ablauf":"2026-12-31"},{"name":"Glucagon 1mg","ort":"Apothekerschrank","menge":1,"ablauf":"2026-11-30"},{"name":"Humalog 100IE/ml","ort":"Apothekerschrank","menge":1,"ablauf":"2026-12-31"},{"name":"Isoptin 5mg/2ml","ort":"Apothekerschrank","menge":1,"ablauf":"2026-06-30"},{"name":"Ketanest S 25mg/5ml","ort":"Wärmefach","menge":3,"ablauf":"2026-10-31"},{"name":"Ketanest S 50mg/10ml","ort":"Wärmefach","menge":3,"ablauf":"2026-10-31"},{"name":"Neostigmin 0.5mg/1ml","ort":"Wärmefach","menge":2,"ablauf":"2027-09-30"},{"name":"Propofol 1% 20ml","ort":"Wärmefach","menge":1,"ablauf":"2026-10-31"},{"name":"Rocuronium 50mg/5ml","ort":"Wärmefach","menge":2,"ablauf":"2027-10-31"},{"name":"Succinylcholin 100mg/2ml","ort":"Wärmefach","menge":1,"ablauf":"2026-10-31"},{"name":"Midazolam 5mg/5ml","ort":"Kühlfach","menge":3,"ablauf":"2026-09-30"},{"name":"Morphin 10mg/1ml","ort":"Kühlfach","menge":3,"ablauf":"2028-01-31"},{"name":"Fentanyl 0.5mg/10ml","ort":"Kühlfach","menge":3,"ablauf":"2027-09-30"},{"name":"Adenosin 6mg/2ml","ort":"Ampullarium Rucksack","menge":2,"ablauf":"2026-09-30"},{"name":"Amiodaron 150mg/3ml","ort":"Ampullarium Rucksack","menge":2,"ablauf":"2026-12-31"},{"name":"Atropin 0.5mg/1ml","ort":"Ampullarium Rucksack","menge":2,"ablauf":"2026-08-31"},{"name":"Histakut 4mg/4ml","ort":"Ampullarium Rucksack","menge":2,"ablauf":"2027-02-28"},{"name":"Nitro Pohl 10mg/ml","ort":"Ampullarium Rucksack","menge":2,"ablauf":"2026-10-31"},{"name":"Metoprolol 5mg/5ml","ort":"Ampullarium Rucksack","menge":2,"ablauf":"2027-10-31"},{"name":"Furosemid 20mg/2ml","ort":"Ampullarium Rucksack","menge":2,"ablauf":"2027-04-30"},{"name":"Ebrantil 50mg/10ml","ort":"Ampullarium Rucksack","menge":2,"ablauf":"2027-05-31"},{"name":"Dexamethason 4mg/ml","ort":"Ampullarium Rucksack","menge":2,"ablauf":"2027-06-30"},{"name":"Midazolam 15mg/3ml","ort":"Ampullarium Rucksack","menge":1,"ablauf":"2028-03-31"},{"name":"Morphin 10mg/1ml","ort":"Ampullarium Rucksack","menge":2,"ablauf":"2028-01-31"},{"name":"Fentanyl 0.5mg/10ml","ort":"Ampullarium Rucksack","menge":2,"ablauf":"2027-09-30"},{"name":"Suprarenin 1mg/1ml","ort":"Ampullarium Rucksack","menge":2,"ablauf":"2027-03-31"},{"name":"Naloxon 0.4mg/1ml","ort":"Ampullarium Rucksack","menge":2,"ablauf":"2028-01-31"},{"name":"Prednisolon 100mg","ort":"Ampullarium Rucksack","menge":2,"ablauf":"2028-04-30"},{"name":"Ipratropiumbromid 0.5mg/2ml","ort":"Ampullarium Rucksack","menge":2,"ablauf":"2027-06-30"},{"name":"Salbutamol 5mg/2.5ml","ort":"Ampullarium Rucksack","menge":2,"ablauf":"2027-05-31"},{"name":"Reproterol 0.09mg/2ml","ort":"Ampullarium Rucksack","menge":2,"ablauf":"2027-06-30"},{"name":"NaCl 0.9% 10ml","ort":"Ampullarium Rucksack","menge":1,"ablauf":"2028-06-30"},{"name":"Midazolam-hameln15mg/3mg","ort":"Ampullarium Rucksack","menge":1,"ablauf":"2027-04-30"},{"name":"Epipen Erwachsen","ort":"Ampullarium Rucksack","menge":1,"ablauf":"2026-08-30"},{"name":"Epipen Kinder","ort":"Ampullarium Rucksack","menge":1,"ablauf":"2026-08-30"},{"name":"Berodualin","ort":"Ampullarium Rucksack","menge":1,"ablauf":"2028-03-31"}];
+  // Apothekerschrank
+  {"name": "Penthrop 99.9%", "ort": "Apothekerschrank", "ablauf": "2028-03-31", "menge": 1},
+  {"name": "Epipen Erwachsen", "ort": "Apothekerschrank", "ablauf": "2026-08-31", "menge": 1},
+  {"name": "Epipen Kinder", "ort": "Apothekerschrank", "ablauf": "2026-08-31", "menge": 1},
+
+  // Wärmefach
+  {"name": "NaCl 0.9% 100ml", "ort": "Wärmefach", "ablauf": "2028-02-28", "menge": 2},
+  {"name": "G10 250ml", "ort": "Wärmefach", "ablauf": "2027-12-31", "menge": 2},
+  {"name": "Aqua a.i 100ml", "ort": "Wärmefach", "ablauf": "2028-04-30", "menge": 2},
+  {"name": "Paracetamol 1g/100ml", "ort": "Wärmefach", "ablauf": "2027-06-30", "menge": 2},
+  {"name": "NaCl 0.9% 10ml", "ort": "Wärmefach", "ablauf": "2028-06-30", "menge": 3},
+  {"name": "NaCl 0.9% 10ml", "ort": "Wärmefach", "ablauf": "2028-07-31", "menge": 7},
+
+  // Kühlfach
+  {"name": "Suprarenin 1mg/ml", "ort": "Kühlfach", "ablauf": "2027-11-30", "menge": 5},
+  {"name": "Lorazepam Macure 4mg/ml", "ort": "Kühlfach", "ablauf": "2026-11-30", "menge": 2},
+  {"name": "Gynipral 10myg/2ml", "ort": "Kühlfach", "ablauf": "2028-04-30", "menge": 2},
+  {"name": "Propofol 2% (50ml)", "ort": "Kühlfach", "ablauf": "2028-07-31", "menge": 2},
+  {"name": "Rectodelt Zäpfen 100mg", "ort": "Kühlfach", "ablauf": "2028-01-31", "menge": 2},
+  {"name": "Mexaratio Zäpfen 250mg", "ort": "Kühlfach", "ablauf": "2029-06-30", "menge": 4},
+
+  // Ampullarium Rucksack
+  {"name": "Novalgin 2.5g (5ml)", "ort": "Ampullarium Rucksack", "ablauf": "2028-02-28", "menge": 1},
+  {"name": "Atropin 0.5mg/1ml", "ort": "Ampullarium Rucksack", "ablauf": "2027-10-31", "menge": 1},
+  {"name": "Beloc 5mg/5ml", "ort": "Ampullarium Rucksack", "ablauf": "2029-10-31", "menge": 2},
+  {"name": "Lösungsmittel für Aspirin", "ort": "Ampullarium Rucksack", "ablauf": "2031-01-29", "menge": 1},
+  {"name": "Aspirin 500mg oral", "ort": "Ampullarium Rucksack", "ablauf": "2030-11-27", "menge": 2},
+  {"name": "Aspirin i.v 500mg", "ort": "Ampullarium Rucksack", "ablauf": "2031-05-26", "menge": 1},
+  {"name": "Urapidil 50mg/10ml", "ort": "Ampullarium Rucksack", "ablauf": "2031-01-28", "menge": 2},
+  {"name": "Ondansetron 4mg/2ml", "ort": "Ampullarium Rucksack", "ablauf": "2030-08-27", "menge": 2},
+  {"name": "Naloxon 0.4mg/ml", "ort": "Ampullarium Rucksack", "ablauf": "2030-06-26", "menge": 1},
+  {"name": "Cyclokapron", "ort": "Ampullarium Rucksack", "ablauf": "2031-07-27", "menge": 2},
+  {"name": "Physiologische Kochsalzlösung \"Fresenius\" 10ml", "ort": "Ampullarium Rucksack", "ablauf": "2030-04-27", "menge": 5},
+  {"name": "Propofol 1% (20ml)", "ort": "Ampullarium Rucksack", "ablauf": "2031-07-28", "menge": 1},
+  {"name": "Stesolid 10mg", "ort": "Ampullarium Rucksack", "ablauf": "2030-11-27", "menge": 1},
+  {"name": "Stesolid 5mg", "ort": "Ampullarium Rucksack", "ablauf": "2030-11-27", "menge": 1},
+  {"name": "NaCl 0.9% 10ml", "ort": "Ampullarium Rucksack", "ablauf": "2031-07-28", "menge": 1},
+  {"name": "Combivent", "ort": "Ampullarium Rucksack", "ablauf": "2028-02-27", "menge": 2},
+  {"name": "Amiodaron 150mg/3ml", "ort": "Ampullarium Rucksack", "ablauf": "2031-12-26", "menge": 3},
+  {"name": "L-Adreanin 20ml", "ort": "Ampullarium Rucksack", "ablauf": "2028-02-27", "menge": 2},
+  {"name": "Suprarenin 1mg/ml", "ort": "Ampullarium Rucksack", "ablauf": "2031-05-26", "menge": 5},
+  {"name": "Histakut 4mg/4ml", "ort": "Ampullarium Rucksack", "ablauf": "2028-02-27", "menge": 1},
+  {"name": "Lösungsmittel für Prednisolut", "ort": "Ampullarium Rucksack", "ablauf": "2031-01-31", "menge": 1},
+  {"name": "Prednisolut 250mg", "ort": "Ampullarium Rucksack", "ablauf": "2031-05-29", "menge": 1},
+  {"name": "Flumazenil", "ort": "Ampullarium Rucksack", "ablauf": "2030-06-27", "menge": 1},
+  {"name": "Ketanest S 50mg/2ml", "ort": "Ampullarium Rucksack", "ablauf": "2031-12-26", "menge": 4},
+  {"name": "Midazolam 15mg/3ml", "ort": "Ampullarium Rucksack", "ablauf": "2031-03-28", "menge": 1},
+  {"name": "Midazolam-hameln15mg/3mg", "ort": "Ampullarium Rucksack", "ablauf": "2030-04-27", "menge": 1},
+  {"name": "NaCl 0.9% 10ml", "ort": "Ampullarium Rucksack", "ablauf": "2030-06-28", "menge": 1},
+  {"name": "Epipen Erwachsen", "ort": "Ampullarium Rucksack", "ablauf": "2030-08-26", "menge": 1},
+  {"name": "Epipen Kinder", "ort": "Ampullarium Rucksack", "ablauf": "2030-08-28", "menge": 1},
+  {"name": "Berodualin", "ort": "Ampullarium Rucksack", "ablauf": "2031-03-28", "menge": 1}
+];
 
 /* ========= UI / Logik ========= */
 const tbody = document.getElementById("tbody");
@@ -205,6 +275,8 @@ const countsEl = document.getElementById("counts");
 const todayEl = document.getElementById("today");
 
 let mode = "critical"; // "critical" | "all"
+
+// Stichtag = "heute" im Browser
 const today = new Date();
 todayEl.textContent = today.toISOString().slice(0,10);
 
@@ -246,8 +318,8 @@ function escapeHtml(str){
 }
 
 /* Sortierung:
-   - mode === "all": Ablaufdatum ASC (früheste zuerst), fehlende Daten ans Ende
-   - mode === "critical": rot vor gelb, jeweils nach Ablaufdatum ASC (fehlende Daten ans Ende)
+   - mode === "all": Ablaufdatum ASC, fehlende Daten ans Ende
+   - mode === "critical": rot vor gelb, dann Ablaufdatum ASC
 */
 function sortForAll(a,b){
   const ta = a._cls.exp ? a._cls.exp.getTime() : Number.POSITIVE_INFINITY;
@@ -310,14 +382,13 @@ function render(){
   }
 }
 
-/* Button-Handling (zwei Buttons, kein Toggle) */
+/* Button-Handling (zwei Buttons) */
 btnCritical.addEventListener("click", () => {
   mode = "critical";
   btnCritical.classList.add("active");
   btnAll.classList.remove("active");
   render();
 });
-
 btnAll.addEventListener("click", () => {
   mode = "all";
   btnAll.classList.add("active");
