--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@ const meds = [
   {"name": "Clopidogrel 75mg", "ort": "RTW Ampullarium", "ablauf": "2026-06-30", "menge": 8},
   {"name": "Ticagrelor 90mg", "ort": "RTW Ampullarium", "ablauf": "2028-03-31", "menge": 2},
   {"name": "Aspirin 500mg oral", "ort": "RTW Ampullarium", "ablauf": "2027-11-30", "menge": 2},
+   {"name": "Ebrantil 25mg", "ort": "RTW Ampullarium", "ablauf": "2026-06-30", "menge": 2},
 
   // Apothekerschrank
   {"name": "Penthrop 99.9%", "ort": "Apothekerschrank", "ablauf": "2028-03-31", "menge": 1},
