--- a/index.html
+++ b/index.html
@@ -76,6 +76,31 @@ button.active{
   text-align:right;
 }
 
+/* Ort-Filter (Chips) */
+.filters{
+  display:none;
+  margin-top:10px;
+  gap:8px;
+  flex-wrap:wrap;
+  justify-content:flex-end;
+}
+.chip{
+  padding:8px 10px;
+  border-radius:999px;
+  background:rgba(255,255,255,.04);
+  border:1px solid rgba(255,255,255,.10);
+  color:var(--muted);
+  font-size:12px;
+  cursor:pointer;
+  user-select:none;
+}
+.chip.active{
+  border-color:var(--cyan);
+  color:var(--text);
+  box-shadow:0 0 14px rgba(90,215,255,.25);
+}
+.chip:hover{border-color:rgba(90,215,255,.35);}
+
 .panel{
   background:var(--panel);
   border:1px solid rgba(255,255,255,.08);
@@ -128,6 +153,7 @@ tfoot td{
   }
   .right{align-items:flex-start}
   .pill{text-align:left}
+  .filters{justify-content:flex-start}
 }
 </style>
 </head>
@@ -137,16 +163,20 @@ tfoot td{
   <header>
     <div>
       <h1>Medikamenteninventar 79/907</h1>
-      <div class="subtitle">NUR KRITISCHE: rot/gelb · ALLE MEDIKAMENTE: nach Ablaufdatum aufsteigend</div>
+      <div class="subtitle" id="subtitle">NUR KRITISCHE: rot/gelb · ALLE MEDIKAMENTE: nach Ort → Ablaufdatum</div>
     </div>
 
     <div class="right">
       <div class="pill" id="inventur">Letzte Inventur: 02.02.2026</div>
+
       <div class="actions">
         <button id="btnCritical" class="active">NUR KRITISCHE</button>
         <button id="btnAll">ALLE MEDIKAMENTE</button>
         <div class="pill" id="counts">–</div>
       </div>
+
+      <!-- Ort-Filter: erscheint nur in "ALLE MEDIKAMENTE" -->
+      <div class="filters" id="filters"></div>
     </div>
   </header>
 
@@ -172,7 +202,7 @@ tfoot td{
 </div>
 
 <script>
-/* ========= Daten: integriert (deine neue Liste) ========= */
+/* ========= Daten ========= */
 const meds = [
   // RTW Ampullarium
   {"name": "Adenosin 6mg/2ml", "ort": "RTW Ampullarium", "ablauf": "2026-09-30", "menge": 6},
@@ -212,7 +242,7 @@ const meds = [
   {"name": "Clopidogrel 75mg", "ort": "RTW Ampullarium", "ablauf": "2026-06-30", "menge": 8},
   {"name": "Ticagrelor 90mg", "ort": "RTW Ampullarium", "ablauf": "2028-03-31", "menge": 2},
   {"name": "Aspirin 500mg oral", "ort": "RTW Ampullarium", "ablauf": "2027-11-30", "menge": 2},
-   {"name": "Ebrantil 25mg", "ort": "RTW Ampullarium", "ablauf": "2026-06-30", "menge": 2},
+  {"name": "Ebrantil 25mg", "ort": "RTW Ampullarium", "ablauf": "2026-05-31", "menge": 2},
 
   // Apothekerschrank
   {"name": "Penthrop 99.9%", "ort": "Apothekerschrank", "ablauf": "2028-03-31", "menge": 1},
@@ -274,10 +304,12 @@ const btnCritical = document.getElementById("btnCritical");
 const btnAll = document.getElementById("btnAll");
 const countsEl = document.getElementById("counts");
 const todayEl = document.getElementById("today");
+const filtersEl = document.getElementById("filters");
+const subtitleEl = document.getElementById("subtitle");
 
 let mode = "critical"; // "critical" | "all"
+let ortFilter = "ALLE"; // "ALLE" oder konkreter Ort
 
-// Stichtag = "heute" im Browser
 const today = new Date();
 todayEl.textContent = today.toISOString().slice(0,10);
 
@@ -319,13 +351,17 @@ function escapeHtml(str){
 }
 
 /* Sortierung:
-   - mode === "all": Ablaufdatum ASC, fehlende Daten ans Ende
-   - mode === "critical": rot vor gelb, dann Ablaufdatum ASC
+   - mode === "all": Ort ASC, im Ort Ablaufdatum ASC, dann Name ASC
+   - mode === "critical": rot vor gelb, dann (wie all)
 */
 function sortForAll(a,b){
+  const ortCmp = a.ort.localeCompare(b.ort, "de");
+  if(ortCmp !== 0) return ortCmp;
+
   const ta = a._cls.exp ? a._cls.exp.getTime() : Number.POSITIVE_INFINITY;
   const tb = b._cls.exp ? b._cls.exp.getTime() : Number.POSITIVE_INFINITY;
   if(ta !== tb) return ta - tb;
+
   return a.name.localeCompare(b.name, "de");
 }
 function sortForCritical(a,b){
@@ -333,7 +369,38 @@ function sortForCritical(a,b){
   const pa = prio[a._cls.cls] ?? 9;
   const pb = prio[b._cls.cls] ?? 9;
   if(pa !== pb) return pa - pb;
+
   return sortForAll(a,b);
+}
+
+/* Ort-Filter UI bauen */
+function buildOrtFilters(){
+  const orte = Array.from(new Set(meds.map(m => m.ort))).sort((a,b)=>a.localeCompare(b,"de"));
+
+  const makeChip = (label, value) => {
+    const el = document.createElement("div");
+    el.className = "chip" + (ortFilter === value ? " active" : "");
+    el.textContent = label;
+    el.addEventListener("click", () => {
+      ortFilter = value;
+      updateOrtChipActive();
+      render();
+    });
+    return el;
+  };
+
+  filtersEl.innerHTML = "";
+  filtersEl.appendChild(makeChip("Alle Orte", "ALLE"));
+  for(const o of orte){
+    filtersEl.appendChild(makeChip(o, o));
+  }
+}
+function updateOrtChipActive(){
+  const chips = filtersEl.querySelectorAll(".chip");
+  chips.forEach(ch => {
+    const val = ch.textContent === "Alle Orte" ? "ALLE" : ch.textContent;
+    ch.classList.toggle("active", ortFilter === val);
+  });
 }
 
 function render(){
@@ -351,10 +418,29 @@ function render(){
   countsEl.textContent = `${enriched.length} gesamt · ${red} rot · ${yellow} gelb · ${ok} ok`;
 
   let shown;
+
   if(mode === "all"){
-    shown = enriched.slice().sort(sortForAll);
+    // Filter sichtbar
+    filtersEl.style.display = "flex";
+
+    // Untertitel dynamisch
+    subtitleEl.textContent = ortFilter === "ALLE"
+      ? "ALLE MEDIKAMENTE: nach Ort → Ablaufdatum (aufsteigend)"
+      : `ALLE MEDIKAMENTE: Ort = ${ortFilter} · Ablaufdatum (aufsteigend)`;
+
+    shown = enriched
+      .filter(x => ortFilter === "ALLE" ? true : x.ort === ortFilter)
+      .slice()
+      .sort(sortForAll);
+
   } else {
-    shown = enriched.filter(x => x._cls.cls !== "ok").sort(sortForCritical);
+    // Filter verstecken & reset Untertitel
+    filtersEl.style.display = "none";
+    subtitleEl.textContent = "NUR KRITISCHE: rot/gelb · ALLE MEDIKAMENTE: nach Ort → Ablaufdatum";
+
+    shown = enriched
+      .filter(x => x._cls.cls !== "ok")
+      .sort(sortForCritical);
   }
 
   if(mode === "critical" && shown.length === 0){
@@ -363,6 +449,17 @@ function render(){
         <td colspan="5" style="padding:16px;color:var(--muted);">
           Keine kritischen Abläufe (rot/gelb) im aktuellen Zeitraum.
           Klick auf <strong>ALLE MEDIKAMENTE</strong>, um das komplette Inventar zu sehen.
+        </td>
+      </tr>
+    `);
+    return;
+  }
+
+  if(mode === "all" && shown.length === 0){
+    tbody.insertAdjacentHTML("beforeend", `
+      <tr class="ok">
+        <td colspan="5" style="padding:16px;color:var(--muted);">
+          Für diesen Ort gibt es keine Einträge.
         </td>
       </tr>
     `);
@@ -383,7 +480,7 @@ function render(){
   }
 }
 
-/* Button-Handling (zwei Buttons) */
+/* Button-Handling */
 btnCritical.addEventListener("click", () => {
   mode = "critical";
   btnCritical.classList.add("active");
@@ -397,6 +494,7 @@ btnAll.addEventListener("click", () => {
   render();
 });
 
+buildOrtFilters();
 render();
 </script>
 </body>
